--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -98,6 +98,11 @@ server {
         proxy_pass http://new-frontend;
     }
 
+    location /ads.txt {
+        proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
+    }
+
     location /api {
         include         uwsgi_params;
         uwsgi_pass      backend-echaloasuerte-3;
