Remove trailing slash redirection

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -64,32 +64,32 @@ server {
         proxy_pass http://old-backend-frontend;
     }
 
-    location /groups/ {
+    location /groups {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /coin/ {
+    location /coin {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /spinner/ {
+    location /spinner {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /raffles/ {
+    location /raffles {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /raffle/ {
+    location /raffle {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /facebook/ {
+    location /facebook {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
