echaloasuerte-nginx.conf: Group all paths in one rule
Note, using a regex here could lead to performance
problems. We could revert once A/B testing has concluded

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -64,42 +64,7 @@ server {
         proxy_pass http://old-backend-frontend;
     }
 
-    location /groups {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /coin {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /spinner {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /raffles {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /raffle {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /facebook {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /privacy-policy {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /ads.txt {
+    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
