echaloasuerte-nginx.conf: Split traffic if A/B testing
Now we can do A/B testing between 2 containers
if wanted

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -11,6 +11,23 @@ upstream new-frontend {
   server localhost:8081;
 }
 
+{% if echaloasuerte_3_git_branch_b is defined %}
+upstream new-frontend-b {
+  server localhost:8082;
+}
+
+split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $abversion {
+    100%     new-frontend;
+    *        new-frontend-b;
+}
+
+map $cookie_ab_split_test_version $frontend_group {
+    default $abversion;
+    "new-frontend" "new-frontend";
+    "new-frontend-b" "new-frontend-b";
+}
+{% endif %}
+
 split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
     50%     old-backend-frontend;
     *       new-frontend;
@@ -65,8 +82,14 @@ server {
     }
 
     location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
+{% if echaloasuerte_3_git_branch_b is defined %}
+        add_header Set-Cookie "ab_split_test_version=$frontend_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+        proxy_pass http://$frontend_group;
+{% else %}
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
+{% endif %}
     }
 
     location /api {
@@ -75,7 +98,13 @@ server {
     }
 
     location @node {
+{% if echaloasuerte_3_git_branch_b is defined %}
+        add_header Set-Cookie "ab_split_test_version=$frontend_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+        proxy_pass http://$frontend_group;
+{% else %}
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
+{% endif %}
     }
 }
