Add new subdomain `mobile`
This will allow us to quickly move the endpoint dynamically.

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -44,7 +44,7 @@ server {
 
 server {
     listen 80;
-    server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
+    server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }} mobile.{{ item }} {% endfor %};
 
     rewrite ^/draw/new/groups/?$ /groups permanent;
     rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
