--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -17,11 +17,11 @@ upstream new-frontend-b {
 }
 
 split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $abversion {
-    100%     new-frontend;
-    *        new-frontend-b;
+    50%     new-frontend;
+    *       new-frontend-b;
 }
 
-map $cookie_ab_split_test_version $frontend_group {
+map $cookie_ab_split_test_version_v2 $frontend_group {
     default $abversion;
     "new-frontend" "new-frontend";
     "new-frontend-b" "new-frontend-b";
@@ -83,7 +83,7 @@ server {
 
     location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
 {% if echaloasuerte_3_git_branch_b is defined %}
-        add_header Set-Cookie "ab_split_test_version=$frontend_group;Path=/;Max-Age=518400;";
+        add_header Set-Cookie "ab_split_test_version_v2=$frontend_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
         proxy_pass http://$frontend_group;
 {% else %}
@@ -99,7 +99,7 @@ server {
 
     location @node {
 {% if echaloasuerte_3_git_branch_b is defined %}
-        add_header Set-Cookie "ab_split_test_version=$frontend_group;Path=/;Max-Age=518400;";
+        add_header Set-Cookie "ab_split_test_version_v2=$frontend_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
         proxy_pass http://$frontend_group;
 {% else %}
