echaloasuerte-nginx.conf: Ignore cookie for static files

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -60,7 +60,7 @@ server {
 
     location /_next/static/ {
         root      {{ echaloasuerte_root }};
-        try_files $uri @node;
+        try_files $uri @node_b;
         expires 365d;
     }
 
@@ -98,12 +98,15 @@ server {
     }
 
     location @node {
-{% if echaloasuerte_3_git_branch_b is defined %}
-        add_header Set-Cookie "ab_split_test_version_v2=$frontend_group;Path=/;Max-Age=518400;";
-        proxy_set_header Host $host;
-        proxy_pass http://$frontend_group;
-{% else %}
         proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
+    }
+
+    location @node_b {
+        proxy_set_header Host $http_host;
+{% if echaloasuerte_3_git_branch_b is defined %}
+        proxy_pass http://new-frontend-b;
+{% else %}
         proxy_pass http://new-frontend;
 {% endif %}
     }
