echaloasuerte-nginx.conf: Remove trailing slashes on eas3
Adding a 'break' end on a rewrite inside of a location block will
make NGINX stop processing more rewrites, and continue with the
rest of the location block code.

This should do the rewrite without the client knowing.

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -82,6 +82,8 @@ server {
     }
 
     location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
+        rewrite ^/(.*)/$ /$1 break;
+
 {% if echaloasuerte_3_git_branch_b is defined %}
         add_header Set-Cookie "ab_split_test_version_v2=$frontend_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
