Redirect also /satic/locales

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -52,6 +52,12 @@ server {
     rewrite ^/draw/new/spinner/?$ /spinner permanent;
     rewrite ^/draw/new/raffle/?$ /raffles permanent;
 
+    location /static/locales/ {
+        root      {{ echaloasuerte_root }};
+        try_files $uri @node_b;
+        expires 365d;
+    }
+
     location /static/ {
         root      {{ echaloasuerte_root }};
         try_files $uri @node;
