Tag nginx configuration-related tasks

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -229,6 +229,8 @@
   notify:
   - restart nginx
   - purge cloudflare cache
+  tags:
+  - nginx-conf
 
 - name: Enable nginx site ecaheloasuerte
   file:
