Send all traffic to nextjs version

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -17,11 +17,11 @@ upstream new-frontend-b {
 }
 
 split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $abversion {
-    50%     new-frontend;
-    *       new-frontend-b;
+    100%    new-frontend-b;
+    *       new-frontend;
 }
 
-map $cookie_ab_split_test_version_v2 $frontend_group {
+map $cookie_ab_split_test_version_v3 $frontend_group {
     default $abversion;
     "new-frontend" "new-frontend";
     "new-frontend-b" "new-frontend-b";
@@ -91,7 +91,7 @@ server {
         rewrite ^/(.*)/$ /$1 break;
 
 {% if echaloasuerte_3_git_branch_b is defined %}
-        add_header Set-Cookie "ab_split_test_version_v2=$frontend_group;Path=/;Max-Age=518400;";
+        add_header Set-Cookie "ab_split_test_version_v3=$frontend_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
         proxy_pass http://$frontend_group;
 {% else %}
