--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -184,6 +184,7 @@
   command: docker service rm eas-service-b
   become: yes
   when: echaloasuerte_3_git_branch_b is not defined
+  ignore_errors: yes
 
 - name: Docker prune old images and containers
   docker_prune:
