Split 50% traffic for new number/letter

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -16,6 +16,12 @@ split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
     *       new-frontend;
 }
 
+map $cookie_number_letter_split_test_version $upstream_group {
+    default $appversion;
+    "old-backend-frontend" "old-backend-frontend";
+    "new-frontend" "new-frontend";
+}
+
 server {
     listen localhost:8080;
 
@@ -68,6 +74,20 @@ server {
     location /api/v1/ {
         proxy_set_header Host $http_host;
         proxy_pass http://old-backend-frontend;
+    }
+
+    location ~ ^/draw/new/(letter|number)/ {
+        add_header Set-Cookie "number_letter_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+
+        if ($upstream_group = "old-backend-frontend") {
+            proxy_pass http://old-backend-frontend;
+        }
+        if ($upstream_group = "new-frontend") {
+            rewrite ^/draw/new/(.*)/$ /$1 break;
+            proxy_pass http://new-frontend;
+        }
+        proxy_pass http://$appversion;
     }
 
     location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
