Nginx rule for /recent

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -90,6 +90,11 @@ server {
         proxy_pass http://$appversion;
     }
 
+    location /recent {
+        proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
+    }
+
     location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
         rewrite ^/(.*)/$ /$1 break;
         proxy_set_header Host $http_host;
