Finish migration of number and letter to eas 3

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -16,12 +16,6 @@ split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
     *       new-frontend;
 }
 
-map $cookie_number_letter_split_test_version $upstream_group {
-    default $appversion;
-    "old-backend-frontend" "old-backend-frontend";
-    "new-frontend" "new-frontend";
-}
-
 server {
     listen localhost:8080;
 
@@ -40,6 +34,8 @@ server {
     rewrite ^/draw/new/coin/?$ /coin permanent;
     rewrite ^/draw/new/spinner/?$ /spinner permanent;
     rewrite ^/draw/new/raffle/?$ /raffles permanent;
+    rewrite ^/draw/new/number/?$ /number permanent;
+    rewrite ^/draw/new/letter/?$ /letter permanent;
 
     location /static/locales/ {
         proxy_set_header Host $http_host;
@@ -77,17 +73,9 @@ server {
     }
 
     location ~ ^/draw/new/(letter|number)/ {
-        add_header Set-Cookie "number_letter_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
-
-        if ($upstream_group = "old-backend-frontend") {
-            proxy_pass http://old-backend-frontend;
-        }
-        if ($upstream_group = "new-frontend") {
-            rewrite ^/draw/new/(.*)/$ /$1 break;
-            proxy_pass http://new-frontend;
-        }
-        proxy_pass http://$appversion;
+        rewrite ^/draw/new/(.*)/$ /$1 break;
+        proxy_pass http://new-frontend;
     }
 
     location /recent {
@@ -95,7 +83,7 @@ server {
         proxy_pass http://new-frontend;
     }
 
-    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|privacy-policy|ads.txt) {
+    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|letter|number|privacy-policy|ads.txt) {
         rewrite ^/(.*)/$ /$1 break;
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
