--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -4,3 +4,9 @@
     - "{{cloudflare_echaloasuerte_id}}"
     - "{{cloudflare_woreep_id}}"
     - "{{cloudflare_chooserandom_id}}"
+
+- name: restart fail2ban
+  service:
+    name: fail2ban
+    state: restarted
+  become: yes
