Draws dice and item on eas 3

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -74,6 +74,8 @@ server {
     rewrite ^/draw/new/raffle/?$ /raffles permanent;
     rewrite ^/draw/new/number/?$ /number permanent;
     rewrite ^/draw/new/letter/?$ /letter permanent;
+    rewrite ^/draw/new/dice/?$ /dice permanent;
+    rewrite ^/draw/new/item/?$ /item permanent;
 
     location /static/locales/ {
         proxy_set_header Host $http_host;
@@ -122,7 +124,7 @@ server {
         proxy_pass http://new-frontend;
     }
 
-    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|letter|number|privacy-policy|ads.txt) {
+    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|letter|number|item|dice|privacy-policy|ads.txt) {
         rewrite ^/(.*)/$ /$1 break;
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
