Fix rate limiting

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -33,7 +33,7 @@ map $limited_ip $limited_ip_key {
     1 $binary_remote_addr;
 }
 
-limit_req_zone $limited_ip zone=apilimit:10m rate=10r/s;
+limit_req_zone $limited_ip_key zone=apilimit:10m rate=10r/s;
 
 
 upstream backend  {
