Don't limit requests coming from ourselves

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -1,3 +1,4 @@
+# cloudflare IPs
 set_real_ip_from 103.21.244.0/22;
 set_real_ip_from 103.22.200.0/22;
 set_real_ip_from 103.31.4.0/22;
@@ -22,12 +23,14 @@ set_real_ip_from 2a06:98c0::/29;
 
 real_ip_header CF-Connecting-IP;
 
-
+# Limit IPs except localhost and server's IP
 geo $limited_ip {
     default      1;
     127.0.0.1    0;
+    {{ansible_default_ipv4.address}}    0;
 }
 
+# Empty address if not limited, remote address otherwise
 map $limited_ip $limited_ip_key {
     0 '';
     1 $binary_remote_addr;
