Fix kibana logs

--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -246,12 +246,12 @@ filebeat.inputs:
   encoding: utf-8
   ignore_older: 3h
 
-registry_file: /var/lib/filebeat/registry
+filebeat.registry_file: /var/lib/filebeat/registry
 
 ############################# Output ##########################################
 
 output:
   logstash:
-    hosts: ["listener.logz.io:5015"]
+    hosts: ["listener-uk.logz.io:5015"]
     ssl:
       certificate_authorities: ['/etc/filebeat/COMODORSADomainValidationSecureServerCA.crt']
