--- a/roles/monitoring/templates/metricbeat.yml
+++ b/roles/monitoring/templates/metricbeat.yml
@@ -29,6 +29,6 @@ type: system_metrics
 
 output:
   logstash:
-    hosts: ["listener.logz.io:5015"]
+    hosts: ["listener-uk.logz.io:5015"]
     ssl:
       certificate_authorities: ['/etc/filebeat/COMODORSADomainValidationSecureServerCA.crt']
