--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -116,9 +116,12 @@
 
 - name: Get logzio certificate
   get_url:
-    url: https://raw.githubusercontent.com/logzio/public-certificates/master/COMODORSADomainValidationSecureServerCA.crt
+    url: https://raw.githubusercontent.com/logzio/public-certificates/master/AAACertificateServices.crt
     dest: /etc/filebeat/COMODORSADomainValidationSecureServerCA.crt
     mode: 0664
+  notify:
+  - restart filebeat
+  - restart metricbeat
 
 - name: Set filebeat config file
   template:
