--- a/roles/monitoring/templates/metricbeat.yml
+++ b/roles/monitoring/templates/metricbeat.yml
@@ -1,6 +1,10 @@
 metricbeat.modules:
 - module: system
-  metricsets: ["cpu","memory","network"]
+  metricsets:
+    - "cpu"
+    - "memory"
+    - "network"
+    - "filesystem"
   enabled: true
   period: 15s
   processes: ['.*']
