Now all postgresql logs are interesting

--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -76,6 +76,7 @@ filebeat.inputs:
     token: {{ logzio_token }}
     type: PostgreSQL
     env: {{ filebeat_env }}
+    level: error
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
