General fine-tuning of uwsgi
- Enables threads
- Auto restart workers
- Improve log access
- Stop logging requests

The change in logging configuration fixes https://github.com/etcaterva/deployment/issues/85

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -1,20 +1,29 @@
 [uwsgi]
 plugins-dir = {{ uwsgi_plugins_dir }}
-plugin = python36, logfile
+plugin = python36
 chdir = {{ echaloasuerte_3_app }}
 home = {{ echaloasuerte_3_venv }}
 wsgi-file = {{ echaloasuerte_3_app_wsgi }}
 
 master = true
 processes = 5
+threads = 2
+enable-threads = True
 
 buffer-size = 20480
 
 socket = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}.sock
-req-logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
-logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
+
+disable-logging = True
+logto = {{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log
+log-backupname = {{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log.old
+log-maxsize = 50000000
+logfile-chmod = 644
+
 chmod-socket = 664
 vacuum = true
+
+max-worker-lifetime = 7200
 
 env = DJANGO_SETTINGS_MODULE={{ echaloasuerte_3_app_settings }}
 env = SENTRY_DSN={{ sentry_dsn }}
