--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -1,18 +1,26 @@
 [uwsgi]
 plugins-dir = {{ uwsgi_plugins_dir }}
-plugin = python27, logfile
+plugin = python27
 chdir = {{ echaloasuerte_app }}
 home = {{ echaloasuerte_venv }}
 wsgi-file = echaloasuerte.wsgi
 
 master = true
 processes = 5
+threads = 2
+enable-threads = True
 
 buffer-size = 20480
 
 socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
-req-logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
-logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
+
+disable-logging = True
+logto = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log
+log-backupname = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log.old
+log-maxsize = 50000000
+logfile-chmod = 644
 
 chmod-socket = 664
 vacuum = true
+
+max-worker-lifetime = 7200
