--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -217,6 +217,8 @@
   with_sequence: count={{ uwsgi_n }}
   notify:
   - restart all uwsgi
+  tags:
+  - uwsgi
 
 - name: Create the nginx config file for echaloasuerte
   template:
