--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -13,6 +13,8 @@ enable-threads = True
 buffer-size = 20480
 
 socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
+socket-timeout = 60
+harakiri = 60
 
 disable-logging = True
 logto = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log
