Set uwsgi timeouts on nginx
These are the defaults anyway

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -80,6 +80,9 @@ server {
     rewrite ^/draw/new/dice/?$ /dice permanent;
     rewrite ^/draw/new/item/?$ /item permanent;
 
+    uwsgi_read_timeout 60;
+    uwsgi_send_timeout 60;
+
     location /static/locales/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
