--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -1,15 +1,96 @@
+# cloudflare IPs
+set_real_ip_from 103.21.244.0/22;
+set_real_ip_from 103.22.200.0/22;
+set_real_ip_from 103.31.4.0/22;
+set_real_ip_from 104.16.0.0/12;
+set_real_ip_from 108.162.192.0/18;
+set_real_ip_from 131.0.72.0/22;
+set_real_ip_from 141.101.64.0/18;
+set_real_ip_from 162.158.0.0/15;
+set_real_ip_from 172.64.0.0/13;
+set_real_ip_from 173.245.48.0/20;
+set_real_ip_from 188.114.96.0/20;
+set_real_ip_from 190.93.240.0/20;
+set_real_ip_from 197.234.240.0/22;
+set_real_ip_from 198.41.128.0/17;
+set_real_ip_from 2400:cb00::/32;
+set_real_ip_from 2606:4700::/32;
+set_real_ip_from 2803:f800::/32;
+set_real_ip_from 2405:b500::/32;
+set_real_ip_from 2405:8100::/32;
+set_real_ip_from 2c0f:f248::/32;
+set_real_ip_from 2a06:98c0::/29;
+
+real_ip_header CF-Connecting-IP;
+
+# Limit IPs except localhost and server's IP
+geo $limited_ip {
+    default      1;
+    127.0.0.1    0;
+    {{ansible_default_ipv4.address}}    0;
+}
+
+# Empty address if not limited, remote address otherwise
+map $limited_ip $limited_ip_key {
+    0 '';
+    1 $binary_remote_addr;
+}
+
+limit_req_zone $limited_ip_key zone=apilimit:10m rate=10r/s;
+
+
 upstream backend-{{ echaloasuerte_3_app_name }}  {
 {% for number in range(1, uwsgi_n+1, 1) %}  server unix:{{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ number }}.sock;
 {% endfor %}
+}
+
+upstream old-backend-frontend {
+  server localhost:8080;
 }
 
 server {
     listen 80;
     server_name {% for item in echaloasuerte_3_domains %} {{ item }} {% endfor %};
 
+    rewrite ^/draw/new/groups/?$ /groups permanent;
+    rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
+    rewrite ^/draw/new/coin/?$ /coin permanent;
+    rewrite ^/draw/new/spinner/?$ /spinner permanent;
+    rewrite ^/draw/new/raffle/?$ /raffles permanent;
+    rewrite ^/draw/new/number/?$ /number permanent;
+    rewrite ^/draw/new/letter/?$ /letter permanent;
+    rewrite ^/draw/new/dice/?$ /dice permanent;
+    rewrite ^/draw/new/item/?$ /item permanent;
+    rewrite ^/draw/new/link_sets/?$ /sets permanent;
+
+    uwsgi_read_timeout 60;
+    uwsgi_send_timeout 60;
+
+    location /api/v1/ {
+        limit_req zone=apilimit burst=20;
+        proxy_set_header Host $http_host;
+        proxy_pass http://old-backend-frontend;
+    }
+
+    location /draw/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://old-backend-frontend;
+    }
+
     location /api {
+        limit_req zone=apilimit burst=20;
         include         uwsgi_params;
         uwsgi_pass      backend-{{ echaloasuerte_3_app_name }};
+    }
+
+    location /static/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://old-backend-frontend;
+
+        proxy_intercept_errors on;
+        recursive_error_pages on;
+        error_page 404 = @node;
+        expires 365d;
     }
 
     location / {
@@ -17,4 +98,10 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://localhost:8081;
     }
+
+    location @node {
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:8081;
+    }
+
 }
