--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -1,61 +1,8 @@
-# cloudflare IPs
-set_real_ip_from 103.21.244.0/22;
-set_real_ip_from 103.22.200.0/22;
-set_real_ip_from 103.31.4.0/22;
-set_real_ip_from 104.16.0.0/12;
-set_real_ip_from 108.162.192.0/18;
-set_real_ip_from 131.0.72.0/22;
-set_real_ip_from 141.101.64.0/18;
-set_real_ip_from 162.158.0.0/15;
-set_real_ip_from 172.64.0.0/13;
-set_real_ip_from 173.245.48.0/20;
-set_real_ip_from 188.114.96.0/20;
-set_real_ip_from 190.93.240.0/20;
-set_real_ip_from 197.234.240.0/22;
-set_real_ip_from 198.41.128.0/17;
-set_real_ip_from 2400:cb00::/32;
-set_real_ip_from 2606:4700::/32;
-set_real_ip_from 2803:f800::/32;
-set_real_ip_from 2405:b500::/32;
-set_real_ip_from 2405:8100::/32;
-set_real_ip_from 2c0f:f248::/32;
-set_real_ip_from 2a06:98c0::/29;
-
-real_ip_header CF-Connecting-IP;
-
-# Limit IPs except localhost and server's IP
-geo $limited_ip {
-    default      1;
-    127.0.0.1    0;
-    {{ansible_default_ipv4.address}}    0;
-}
-
-# Empty address if not limited, remote address otherwise
-map $limited_ip $limited_ip_key {
-    0 '';
-    1 $binary_remote_addr;
-}
-
-limit_req_zone $limited_ip_key zone=apilimit:10m rate=10r/s;
-
-
 upstream backend  {
 {% for number in range(1, uwsgi_n+1, 1) %}  server unix:/var/www/echaloasuerte/echaloasuerte-uwsgi{{ number }}.sock;
 {% endfor %}
 }
 
-upstream old-backend-frontend {
-  server localhost:8080;
-}
-
-upstream new-frontend {
-  server localhost:8081;
-}
-
-split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
-    50%     old-backend-frontend;
-    *       new-frontend;
-}
 
 server {
     listen localhost:8080;
@@ -64,86 +11,20 @@ server {
         include         uwsgi_params;
         uwsgi_pass      backend;
     }
+    location /static/ {
+        root      {{ echaloasuerte_root }};
+        try_files $uri @node
+        expires 365d;
+
+    }
 }
 
 server {
     listen 80;
-    server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }} mobile.{{ item }} {% endfor %};
-
-    rewrite ^/draw/new/groups/?$ /groups permanent;
-    rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
-    rewrite ^/draw/new/coin/?$ /coin permanent;
-    rewrite ^/draw/new/spinner/?$ /spinner permanent;
-    rewrite ^/draw/new/raffle/?$ /raffles permanent;
-    rewrite ^/draw/new/number/?$ /number permanent;
-    rewrite ^/draw/new/letter/?$ /letter permanent;
-    rewrite ^/draw/new/dice/?$ /dice permanent;
-    rewrite ^/draw/new/item/?$ /item permanent;
-
-    uwsgi_read_timeout 60;
-    uwsgi_send_timeout 60;
-
-    location /static/locales/ {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-        expires 365d;
-    }
-
-    location /static/ {
-        root      {{ echaloasuerte_root }};
-        try_files $uri @node;
-        expires 365d;
-    }
-
-    location /_next/static/ {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-        expires 365d;
-    }
-
-    location /favicon.ico {
-        try_files $uri @node;
-        expires 365d;
-        access_log off;
-        log_not_found off;
-    }
+    server_name {% for item in FQDN %} {{ item }} legacy.{{ item }} {{ item }} {{ item }} {% endfor %};
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://old-backend-frontend;
-    }
-
-    location /api/v1/ {
-        limit_req zone=apilimit burst=20;
-        proxy_set_header Host $http_host;
-        proxy_pass http://old-backend-frontend;
-    }
-
-    location ~ ^/draw/new/(letter|number)/ {
-        proxy_set_header Host $host;
-        rewrite ^/draw/new/(.*)/$ /$1 break;
-        proxy_pass http://new-frontend;
-    }
-
-    location /recent {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location ~ ^/(groups|coin|spinner|raffles|raffle|facebook|letter|number|item|dice|privacy-policy|ads.txt) {
-        rewrite ^/(.*)/$ /$1 break;
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
-    }
-
-    location /api {
-        limit_req zone=apilimit burst=20;
-        include         uwsgi_params;
-        uwsgi_pass      backend-echaloasuerte-3;
-    }
-
-    location @node {
-        proxy_set_header Host $http_host;
-        proxy_pass http://new-frontend;
+        proxy_pass http://localhost:8080;
     }
 }
