Redirect /admin to backend

--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -83,6 +83,11 @@ server {
         uwsgi_pass      backend-{{ echaloasuerte_3_app_name }};
     }
 
+    location /admin {
+        include         uwsgi_params;
+        uwsgi_pass      backend-{{ echaloasuerte_3_app_name }};
+    }
+
     location /static/ {
         proxy_set_header Host $http_host;
         proxy_pass http://old-backend-frontend;
