Fix nginx syntax

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -13,7 +13,7 @@ server {
     }
     location /static/ {
         root      {{ echaloasuerte_root }};
-        try_files $uri @node
+        try_files $uri @node;
         expires 365d;
 
     }
