Fix eas2 nginx config
Remove duplicated domain names
Stop try_files

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -13,7 +13,6 @@ server {
     }
     location /static/ {
         root      {{ echaloasuerte_root }};
-        try_files $uri @node;
         expires 365d;
 
     }
@@ -21,7 +20,7 @@ server {
 
 server {
     listen 80;
-    server_name {% for item in FQDN %} {{ item }} legacy.{{ item }} {{ item }} {{ item }} {% endfor %};
+    server_name {% for item in FQDN %} legacy.{{ item }} {% endfor %};
 
     location / {
         proxy_set_header Host $http_host;
