Decide in nginx of eas2 what to do with /static

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -11,10 +11,17 @@ server {
         include         uwsgi_params;
         uwsgi_pass      backend;
     }
+
     location /static/ {
         root      {{ echaloasuerte_root }};
+        try_files $uri @node;
         expires 365d;
 
+    }
+
+    location @node {
+        proxy_set_header Host $http_host;
+        proxy_pass http://localhost:8081;
     }
 }
 
