Add uwsgi stats information in monitoring

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -16,6 +16,8 @@ socket = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}.sock
 socket-timeout = 60
 harakiri = 60
 
+stats = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}-stats.sock
+
 disable-logging = True
 logto = {{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log
 log-backupname = {{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log.old
