--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -31,3 +31,4 @@ env = DJANGO_SETTINGS_MODULE={{ echaloasuerte_3_app_settings }}
 env = SENTRY_DSN={{ sentry_dsn }}
 env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
 env = EAS_MAIL_PASSWORD={{ noreply_mail_password }}
+env = EAS_PAYPAL_SECRET={{ eas_ppal_token }}
