--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -14,6 +14,8 @@ platforms:
     groups:
       - ECHALOASUERTE
       - POSTGRESQL_DATABASES
+    etc_hosts: "{'db': '127.0.0.1'}"
+
 provisioner:
   name: ansible
   inventory:
