--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -22,6 +22,7 @@ provisioner:
     group_vars:
       all:
         ansible_python_interpreter: "/usr/bin/python3"
+        eas_ppal_token: "cafe"
 
 verifier:
   name: ansible
