missing env vars for logs. now it all runs
docker in docker doen't work as /var/lib/docker needs to be a volume

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -101,6 +101,8 @@
     virtualenv: "{{ echaloasuerte_3_venv }}"
     settings: "{{ echaloasuerte_3_app_settings }}"
     command: shell -c 'import sys; from django.contrib.auth.models import User; sys.exit(0 if User.objects.filter(username="{{ eas_admin_username }}").count() > 0 else 1)'
+  environment:
+    ECHALOASUERTE_LOGS_PATH: "{{ echaloasuerte_3_logs }}"
   become: yes
   become_user: www-data
   register: checksuperuser
@@ -115,6 +117,8 @@
     virtualenv: "{{ echaloasuerte_3_venv }}"
     settings: "{{ echaloasuerte_3_app_settings }}"
     command: "createsuperuser --noinput --username={{ eas_admin_username }} --email={{ eas_admin_email }}"
+  environment:
+    ECHALOASUERTE_LOGS_PATH: "{{ echaloasuerte_3_logs }}"
   become: yes
   become_user: www-data
   when: checksuperuser.failed
@@ -127,6 +131,8 @@
     virtualenv: "{{ echaloasuerte_3_venv }}"
     settings: "{{ echaloasuerte_3_app_settings }}"
     command: shell -c 'from django.contrib.auth.models import User; u = User.objects.get(username="{{ eas_admin_username }}"); u.set_password("{{ eas_admin_pass }}"); u.save()'
+  environment:
+    ECHALOASUERTE_LOGS_PATH: "{{ echaloasuerte_3_logs }}"
   become: yes
   become_user: www-data
   when: checksuperuser.failed
